# CodeCartographer

./: .cartographer_memory.json  .gitignore  .navigator_memory.json  CHANGELOG.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES  compressor.py  context.xml  injector.py  install.ps1  install.sh  launch.py  navigator_map.xml  verify_ignore.py  verify_install.ps1
.cartographer/: cce_dist
.github/workflows/: release.yml
docs/: architecture.md  gaps.md  implementation.md  plan.md  vscode.md
docs/api/: module_context.md  openapi.yaml  search.md
docs/internal/: reach_followup.md
docs/internal/features/: charts.md  reach-experiment-results.md  reach.md
docs/user/: README.md  architecture-analysis.md  cli-reference.md  configuration.md  context-modes.md  diagrams.md  ecosystem.md  getting-started.md  git-intelligence.md  github-action.md  integration.md  mcp-tools.md  search.md
examples/: custom_agent.py  uc_python_integration.py  uc_workflow_demo.sh  webhook_server.py
github-action/: action.yml  example-workflow.yml
github-action/scripts/: install.sh  run.sh
mapper-core/cartographer/: Cargo.toml  build.rs  cbindgen.toml
mapper-core/cartographer/include/: cartographer.h
mapper-core/cartographer/scripts/: localize-tree-sitter-symbols.sh
mapper-core/cartographer/scripts/tests/: test-localize-symbols.sh
mapper-core/cartographer/src/: api.rs  call_graph.rs  diagram.rs  diagram_export.rs  extractor.rs  git_analysis.rs  global_config.rs  html_export.rs  layers.rs  lib.rs  main.rs  mapper.rs  mcp.rs  memory.rs  scanner.rs  search.rs  token_metrics.rs  uc_agents.rs  uc_analytics.rs  uc_client.rs  uc_sync.rs  uc_webhooks.rs
mapper-core/cmp/: Cargo.toml
mapper-core/cmp/src/: api.rs  formatter.rs  layers.rs  main.rs  mapper.rs  mcp.rs  memory.rs  scanner.rs  sync.rs  uc_agents.rs  uc_analytics.rs  uc_client.rs  uc_sync.rs  uc_webhooks.rs  webhooks.rs
mapper-core/codecartographer/: Cargo.toml  build.rs  cbindgen.toml
mapper-core/codecartographer/include/: codecartographer.h
mapper-core/codecartographer/scripts/: localize-tree-sitter-symbols.sh
mapper-core/codecartographer/scripts/tests/: test-localize-symbols.sh
mapper-core/codecartographer/src/: answer.rs  api.rs  call_graph.rs  class_graph.rs  diagram.rs  diagram_export.rs  doctor.rs  extractor.rs  git_analysis.rs  global_config.rs  html_export.rs  lib.rs  main.rs  mapper.rs  mcp.rs  memory.rs  reach.rs  scanner.rs  search.rs  sync.rs  token_metrics.rs  webhooks.rs
mapper-core/nyx-navigator/: .navigator_memory.json  Cargo.toml  build.rs  cbindgen.toml  context.xml  index.scip  navigator_map.xml
mapper-core/nyx-navigator/include/: navigator.h
mapper-core/nyx-navigator/scripts/: localize-tree-sitter-symbols.sh
mapper-core/nyx-navigator/scripts/tests/: test-localize-symbols.sh
mapper-core/nyx-navigator/src/: answer.rs  api.rs  call_graph.rs  class_graph.rs  cross_call.rs  diagram.rs  diagram_export.rs  extractor.rs  git_analysis.rs  global_config.rs  html_export.rs  layers.rs  lib.rs  main.rs  mapper.rs  mcp.rs  memory.rs  reach.rs  scanner.rs  search.rs  token_metrics.rs  webhooks.rs
tools/: cce_bridge.mjs
