[package]
name = "cartographer"
version = "3.0.1"  # Bump for security release
edition = "2021"
description = "Code Cartographer for Architectural Intelligence"
authors = ["SimplyLiz"]

[[bin]]
name = "cartographer"
path = "src/main.rs"

[lib]
name = "cartographer"
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs"

[features]
default = ["lang-rust", "lang-go", "lang-python", "lang-typescript", "lang-javascript", "lang-c", "lang-cpp"]
lang-rust       = ["dep:tree-sitter", "dep:tree-sitter-rust"]
lang-go         = ["dep:tree-sitter", "dep:tree-sitter-go"]
lang-python     = ["dep:tree-sitter", "dep:tree-sitter-python"]
lang-typescript = ["dep:tree-sitter", "dep:tree-sitter-typescript"]
lang-javascript = ["dep:tree-sitter", "dep:tree-sitter-javascript"]
lang-c          = ["dep:tree-sitter", "dep:tree-sitter-c"]
lang-cpp        = ["dep:tree-sitter", "dep:tree-sitter-cpp"]

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
walkdir = "=2.4.1"
notify = { version = "=6.1.1", features = ["macos_kqueue"] }
notify-debouncer-mini = "=0.4.1"
anyhow = "=1.0.79"
serde = { version = "=1.0.193", features = ["derive"] }
serde_json = "=1.0.108"
tiktoken-rs = "=0.5.8"
arboard = "=3.3.2"
regex = { version = "=1.10.2", features = ["std"] }
reqwest = { version = "=0.11.24", features = ["json", "blocking"] }
tokio = { version = "=1.35.0", features = ["full"] }
chrono = "=0.4.31"
toml = { version = "=0.8.8", features = ["parse"] }
uuid = { version = "=1.6.1", features = ["v4", "serde"] }
petgraph = "=0.6.4"
rayon = "=1.8.0"
flate2 = "=1.0.28"
tree-sitter          = { version = "=0.22.6", optional = true }
tree-sitter-rust     = { version = "=0.21.3", optional = true }
tree-sitter-go       = { version = "=0.21.2", optional = true }
tree-sitter-python   = { version = "=0.21.2", optional = true }
tree-sitter-javascript  = { version = "=0.21.2", optional = true }
tree-sitter-typescript  = { version = "=0.21.2", optional = true }
tree-sitter-c        = { version = "=0.21.3", optional = true }
tree-sitter-cpp      = { version = "=0.22.6", optional = true }

[build-dependencies]
cbindgen = "=0.27.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
