[package]
name = "CodeCartographer"
version = "1.3.3"
edition = "2021"
description = "CodeCartographer for Architectural Intelligence"
authors = ["SimplyLiz"]

[[bin]]
name = "codecartographer"
path = "src/main.rs"

[lib]
name = "code_cartographer"
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs"

[features]
default = ["lang-rust", "lang-go", "lang-python", "lang-typescript", "lang-javascript", "lang-c", "lang-cpp", "lang-java", "lang-csharp", "lang-ruby", "lang-kotlin", "lang-swift", "lang-php"]
lang-rust       = ["dep:tree-sitter", "dep:tree-sitter-rust"]
lang-go         = ["dep:tree-sitter", "dep:tree-sitter-go"]
lang-python     = ["dep:tree-sitter", "dep:tree-sitter-python"]
lang-typescript = ["dep:tree-sitter", "dep:tree-sitter-typescript"]
lang-javascript = ["dep:tree-sitter", "dep:tree-sitter-javascript"]
lang-c          = ["dep:tree-sitter", "dep:tree-sitter-c"]
lang-cpp        = ["dep:tree-sitter", "dep:tree-sitter-cpp"]
lang-java       = ["dep:tree-sitter", "dep:tree-sitter-java"]
lang-csharp     = ["dep:tree-sitter", "dep:tree-sitter-c-sharp"]
lang-ruby       = ["dep:tree-sitter", "dep:tree-sitter-ruby"]
lang-kotlin     = ["dep:tree-sitter", "dep:tree-sitter-kotlin"]
lang-swift      = ["dep:tree-sitter", "dep:tree-sitter-swift"]
lang-php        = ["dep:tree-sitter", "dep:tree-sitter-php"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
notify = { version = "6.1", features = ["macos_kqueue"] }
notify-debouncer-mini = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiktoken-rs = "0.5"
arboard = "3.2"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.35", features = ["full"] }
chrono = "0.4"
toml = { version = "0.8", features = ["parse"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
petgraph = "0.6"
rayon = "1.10"
flate2 = "1.0"
tree-sitter          = { version = "0.22", optional = true }
tree-sitter-rust     = { version = "0.21", optional = true }
tree-sitter-go       = { version = "0.21", optional = true }
tree-sitter-python   = { version = "0.21", optional = true }
tree-sitter-javascript  = { version = "0.21", optional = true }
tree-sitter-typescript  = { version = "0.21", optional = true }
tree-sitter-c        = { version = "0.21", optional = true }
tree-sitter-cpp      = { version = "0.22", optional = true }
tree-sitter-java     = { version = "0.21", optional = true }
tree-sitter-c-sharp  = { version = "0.21", optional = true }
tree-sitter-ruby     = { version = "0.21", optional = true }
tree-sitter-kotlin   = { version = "0.3", optional = true }
tree-sitter-swift    = { version = "0.5", optional = true }
tree-sitter-php      = { version = "0.22", optional = true }

[build-dependencies]
cbindgen = "0.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
